--- a/_includes/ui/footer/footer.html
+++ b/_includes/ui/footer/footer.html
@@ -26,7 +26,7 @@
       <h4>Follow Us</h4>
       <ul>
         <li><a href="https://www.instagram.com/hustlestar_clothing?igsh=bXduNDlhOHczb3Ry&utm_source=qr" target="_blank"><i class='bx bxl-instagram'></i></a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><i class='bx bxl-tiktok'></i></a></li>
+        <li><a href="https://www.tiktok.com/@hustlestarclothing?_t=ZM-8tRV5OJgvQr&_r=1" target="_blank"><i class='bx bxl-tiktok'></i></a></li>
         <li><a href="https://www.twitter.com/" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
       </ul>
      </div>
