--- a/_includes/ui/items/hoodie.html
+++ b/_includes/ui/items/hoodie.html
@@ -4,17 +4,17 @@
     <div class="hoodie__container-items">
       <!-- First hoodie -->
       <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieorange.png" alt="" class="product-img" />
+        <img src="/assets/images/hoodieorange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">$25</span>
+        <span class="price">D1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-1"></i>
       </div>
 
       <!-- Second hoodie -->
       <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieBlack.PNG" alt="" class="product-img" />
+        <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">$25</span>
+        <span class="price">D1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-2"></i>
       </div>
 
@@ -22,35 +22,35 @@
       <div class="hoodie__container-item product-box">
         <img
           src="/assets/images/hoodie-orange.png"
-          alt=""
-          class="product-img"
+          alt="Go Grab Our Hoodie Now"
+          class="product-img modal-triger"
         />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">$25</span>
+        <span class="price">D1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-3"></i>
       </div>
 
       <!-- Fourth hoodie -->
-      <div class="hoodie__container-item product-box">
+      <!-- <div class="hoodie__container-item product-box">
         <img src="/assets/images/hoodieBlack.PNG" alt="" class="product-img" />
         <h2 class="product-title">Onyx Hoodie</h2>
         <span class="price">$25</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-4"></i>
-      </div>
+      </div> -->
 
       <!-- Fifth hoodie -->
       <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieorange.png" alt="" class="product-img" />
+        <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">$25</span>
+        <span class="price">D1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-5"></i>
       </div>
 
       <!-- Sixth hoodie -->
       <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieBlack.PNG" alt="" class="product-img" />
+        <img src="/assets/images/hoodie-orange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">$25</span>
+        <span class="price">D1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-6"></i>
       </div>
     </div>
