--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -1,34 +1,88 @@
 <section class="tracksuit container" id="trackSuits">
-    <div class="tracksuit-head">
-        <div class="tracksuit-head--left">
-            <h1 class="title">Grab our limited edition tracksuit, available in-store now!</h1>
-        </div>
-        <div class="button-link">
-            <a href="#" target="_blank " class="whatsapp-btn">More Info</a>
-        </div>
+  <div class="tracksuit-head">
+    <div class="tracksuit-head--left">
+      <h1 class="title">
+        Grab our limited edition tracksuit, available in-store now!
+      </h1>
     </div>
-    <div class="gallery">
-        <figure class="gallery-item gallery-item--1">
-            <img src="/assets/images/tracksuit1.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-        </figure>
-        <div class="inner_grid">
-            <figure class="gallery-item gallery-item--2">
-                <img src="/assets/images/tracksuit2.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-            </figure>
-            <figure class="gallery-item gallery-item--3">
-                <img src="/assets/images/tracksuit3.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-            </figure>
-            <figure class="gallery-item gallery-item--4">
-                <img src="/assets/images/tracksuit4.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-            </figure>
-            <figure class="gallery-item gallery-item--5">
-                <img src="/assets/images/tracksuit1.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-            </figure>
-        </div>
-        <figure class="gallery-item gallery-item--6">
-            <img src="/assets/images/tracksuit4.PNG" alt="Go grab our tracksuit now" class="gallery-img product-img modal-triger" />
-            <span class="price">$25</span>
-            <!-- <i class='bx bx-shopping-bag add-cart'></i> -->
-        </figure>
+    <div class="button-link">
+      <a href="#" target="_blank ">More Info</a>
     </div>
+  </div>
+  <div class="gallery">
+    <figure class="gallery-item gallery-item--1 product-box">
+      <img
+        src="/assets/images/tracksuit1.PNG"
+        alt="Go grab our tracksuit now"
+        class="gallery-img product-img modal-triger product-img"
+      />
+      <div class="pricing">
+        <span class="price">D1800</span>
+        <h2 class="product-title">Blaze Hoodie</h2>
+        <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+      </div>
+    </figure>
+    <div class="inner_grid">
+      <figure class="gallery-item gallery-item--2">
+        <img
+          src="/assets/images/tracksuit2.PNG"
+          alt="Go grab our tracksuit now"
+          class="gallery-img product-img modal-triger"
+        />
+        <div class="pricing">
+            <!-- <span class="price">$25</span>
+            <h2 class="product-title">Blaze Hoodie</h2> -->
+            <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+        </div>
+      </figure>
+      <figure class="gallery-item gallery-item--3">
+        <img
+          src="/assets/images/tracksuit3.PNG"
+          alt="Go grab our tracksuit now"
+          class="gallery-img product-img modal-triger"
+        />
+        <div class="pricing">
+            <!-- <span class="price">$25</span>
+            <h2 class="product-title">Blaze Hoodie</h2> -->
+            <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+        </div>
+      </figure>
+      <figure class="gallery-item gallery-item--4">
+        <img
+          src="/assets/images/tracksuit4.PNG"
+          alt="Go grab our tracksuit now"
+          class="gallery-img product-img modal-triger"
+        />
+        <div class="pricing">
+            <!-- <span class="price">$25</span>
+            <h2 class="product-title">Blaze Hoodie</h2> -->
+            <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+        </div>
+      </figure>
+      <figure class="gallery-item gallery-item--5">
+        <img
+          src="/assets/images/tracksuit1.PNG"
+          alt="Go grab our tracksuit now"
+          class="gallery-img product-img modal-triger"
+        />
+        <div class="pricing">
+            <!-- <span class="price">$25</span>
+            <h2 class="product-title">Blaze Hoodie</h2> -->
+            <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+        </div>
+      </figure>
+    </div>
+    <figure class="gallery-item gallery-item--6 product-box">
+      <img
+        src="/assets/images/tracksuit4.PNG"
+        alt="Go grab our tracksuit now"
+        class="gallery-img modal-triger product-img"
+      />
+    <div class="pricing">
+        <span class="price">D1800</span>
+        <h2 class="product-title">Blaze Hoodie</h2>
+        <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
+    </div>
+    </figure>
+  </div>
 </section>
