--- a/_includes/ui/testimonial/testimonial.html
+++ b/_includes/ui/testimonial/testimonial.html
@@ -6,51 +6,40 @@
   <div class="testimonial-content">
     <div class="testimonial-slide">
       <!-- testimonial 1 -->
-      <div class="testimonial actives">
-        <img src="/assets/images/delz (3).png" alt="" />
-        <h6 class="person">Delz</h6>
-        <p class="occupation">Gamvibz CEO</p>
-        <p>
-          I'm thrilled with the results! The team's work has truly exceeded my
-          expectations, and it's been a pleasure collaborating with them.
-        </p>
-      </div>
-      <!-- testimonial 2 -->
       <div class="testimonial">
-        <img src="/assets/images/T-shirt0.png" alt="" />
-        <h6 class="person">Pa Abdou</h6>
-        <p class="occupation">Artist</p>
-        <p>
-          I'm extremely pleased with the service! The team was professional,
-          attentive, and helped us achieve incredible results in no time.
-        </p>
-      </div>
-      <!-- testimonial 2 -->
-      <div class="testimonial">
-        <img src="/assets/images/avatar.png" alt="" />
         <h6 class="person">Saikou_Spearr</h6>
-        
         <p>
-          It's so motivated when ever I thought about huslestar_clothing man dem bad, celebrate ya hustle with them get yours and tell your friends about innit 🔥
+          It's so motivated when ever I thought about huslestar_clothing man dem
+          bad, celebrate ya hustle with them get yours and tell your friends
+          about innit 🔥
+        </p>
+      </div>
+      <!-- testimonial 2 -->
+      <div class="testimonial">
+        <h6 class="person">Posteh_official</h6>
+        <p class="occupation">Comedian</p>
+        <p>
+          When I firts got it I thought it was a readymade shirt probably
+          imported because of the quality of the shirt and the quality of the
+          printing <br />
+          it was late when a guy told me someone owns this brand and it's
+          Gambian I felt proud.
         </p>
       </div>
       <!-- testimonial 3 -->
       <div class="testimonial">
-        <img src="/assets/images/test.jpeg" alt="" />
-        <h6 class="person">Posteh_official</h6>
-        <p class="occupation">Comedian</p>
+        <h6 class="person">S_Njie</h6>
+        <!-- <p class="occupation">Artist</p> -->
         <p>
-         When I firts got it I thought it was a readymade shirt probably imported because of the quality of the shirt and the quality of the printing <br> it was late when a guy told me someone owns this brand and it's Gambian I felt proud.
+         Your empowering and dedications has made a significant impact in the business owners! I appreciate your willingness and commitment
         </p>
       </div>
       <!-- testimonial 4 -->
       <div class="testimonial">
-        <img src="/assets/images/T-shirt0.png" alt="" />
-        <h6 class="person">Pa Abdou</h6>
-        <p class="occupation">Artist</p>
+        <h6 class="person">Jum</h6>
+        <!-- <p class="occupation">Artist</p> -->
         <p>
-          I'm extremely pleased with the service! The team was professional,
-          attentive, and helped us achieve incredible results in no time.
+          I appreciate this fam, topnotch it will be my favourite brand for sure
         </p>
       </div>
     </div>
