--- a/_includes/ui/items/shop.html
+++ b/_includes/ui/items/shop.html
@@ -6,56 +6,56 @@
          <div class="product-box">
             <img src="/assets/images/short-black.png" alt="" class="product-img">
             <h2 class="product-title">Shine with ambition</h2>
-            <span class="price">$20</span>
+            <span class="price">D600</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-1"></i>
          </div>
          <!-- Box 2 -->
          <div class="product-box">
             <img src="/assets/images/hustleLOng.png" alt="" class="product-img">
             <h2 class="product-title">Evergreen hustle Tee</h2>
-            <span class="price">$12</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-2"></i>
          </div>
          <!-- Box 3 -->
          <div class="product-box">
             <img src="/assets/images/short-black.png" alt="" class="product-img">
             <h2 class="product-title">Shine with ambition</h2>
-            <span class="price">$20</span>
+            <span class="price">D600</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-3" ></i>
          </div>
          <!-- Box 4 -->
          <div class="product-box">
             <img src="/assets/images/abdu (1).png" alt="" class="product-img">
             <h2 class="product-title">Midnight Hustle Tee</h2>
-            <span class="price">$25</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-4"></i>
          </div>
          <!-- Box 5 -->
          <div class="product-box">
             <img src="/assets/images/delz (1).png" alt="" class="product-img">
             <h2 class="product-title">Midnight Hustle Tee</h2>
-            <span class="price">$10</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-5"></i>
          </div>
          <!-- Box 6 -->
          <div class="product-box">
             <img src="/assets/images/abdu (1).png" alt="" class="product-img">
             <h2 class="product-title">Midnight Hustle Tee</h2>
-            <span class="price">$50</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart'data-id="shop-product-6"></i>
          </div>
          <!-- Box 7 -->
          <div class="product-box">
             <img src="/assets/images/T-shirt (1).png" alt="" class="product-img">
             <h2 class="product-title">Evergreen hustle Tee</h2>
-            <span class="price">$15</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-7"></i>
          </div>
          <!-- Box 8 -->
          <div class="product-box">
             <img src="/assets/images/delz (1).png" alt="" class="product-img">
             <h2 class="product-title">Midnight Hustle Tee</h2>
-            <span class="price">$30</span>
+            <span class="price">D500</span>
             <i class='bx bx-shopping-bag add-cart' data-id="shop-product-8"></i>
          </div>
      </div>
