--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <!-- CSS Link -->
     <link
       rel="stylesheet"
-      href="{{ '/assets/css/style.css' | relative_url }}"
+      href="{{ '/assets/css/style.css' | absolute_url }}"
     />
   </head>
   <body>
