--- a/_includes/ui/items/hoodie.html
+++ b/_includes/ui/items/hoodie.html
@@ -6,7 +6,7 @@
       <div class="hoodie__container-item product-box">
         <img src="/assets/images/hoodieorange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">D1000</span>
+        <span class="price">GMD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-1"></i>
       </div>
 
@@ -14,7 +14,7 @@
       <div class="hoodie__container-item product-box">
         <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">D1000</span>
+        <span class="price">GMDD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-2"></i>
       </div>
 
@@ -26,31 +26,23 @@
           class="product-img modal-triger"
         />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">D1000</span>
+        <span class="price">GMD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-3"></i>
       </div>
 
       <!-- Fourth hoodie -->
-      <!-- <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieBlack.PNG" alt="" class="product-img" />
-        <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">$25</span>
-        <i class="bx bx-shopping-bag add-cart" data-id="hoodie-4"></i>
-      </div> -->
-
-      <!-- Fifth hoodie -->
       <div class="hoodie__container-item product-box">
         <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">D1000</span>
+        <span class="price">GMD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-5"></i>
       </div>
 
-      <!-- Sixth hoodie -->
+      <!-- Fifth hoodie -->
       <div class="hoodie__container-item product-box">
         <img src="/assets/images/hoodie-orange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">D1000</span>
+        <span class="price">GMD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-6"></i>
       </div>
     </div>
