--- a/_includes/ui/items/shop2.html
+++ b/_includes/ui/items/shop2.html
@@ -4,21 +4,21 @@
      <div class="product-box drop-box">
          <img src="/assets/images/short-black1.png" alt="Grab your new drop now!" class="product-img modal-triger">
          <h2 class="product-title">Shine with ambition</h2>
-         <span class="price">D600</span>
+         <span class="price">GMD600</span>
          <i class='bx bx-shopping-bag add-cart' data-id="newdrop-1"></i>
      </div>
      <!--  -->
      <div class="product-box">
          <img src="/assets/images/blank.png" alt="Grab your new drop now!" class="product-img modal-triger">
          <h2 class="product-title">Midnight Hustle tee</h2>
-         <span class="price">D500</span>
+         <span class="price">GMD500</span>
          <i class='bx bx-shopping-bag add-cart' data-id="newdrop-2"></i>
      </div>
      <!--  -->
      <div class="product-box">
          <img src="/assets/images/short-black1 (3).png" alt="Grab your new drop now!" class="product-img modal-triger">
          <h2 class="product-title">SHINE WITH AMBITION</h2>
-         <span class="price">D600</span>
+         <span class="price">GMD600</span>
          <i class='bx bx-shopping-bag add-cart' data-id="newdrop-3"></i>
      </div>
     </div>
