--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -17,8 +17,8 @@
         class="gallery-img product-img modal-triger product-img"
       />
       <div class="pricing">
-        <span class="price">D1800</span>
-        <h2 class="product-title">Blaze Hoodie</h2>
+        <span class="price">GMD1800</span>
+        <h2 class="product-title">Tracksuit</h2>
         <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
       </div>
     </figure>
@@ -79,8 +79,8 @@
         class="gallery-img modal-triger product-img"
       />
     <div class="pricing">
-        <span class="price">D1800</span>
-        <h2 class="product-title">Blaze Hoodie</h2>
+        <span class="price">GMD1800</span>
+        <h2 class="product-title">Tracksuit</h2>
         <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
     </div>
     </figure>
