--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,10 @@
       rel="stylesheet"
     />
     <!-- CSS Link -->
-    <!-- <link
+    <link
       rel="stylesheet"
-      href="{{ '/assets/css/style.css' | absolute_url }}"
-    /> -->
-    <link rel="stylesheet" href="https://karamo10.github.io/hustlestargm/assets/css/style.css" />
-
+      href="{{ '/assets/css/style.css' | relative_url }}"
+    />
   </head>
   <body>
     <!-- Header Section -->
