--- a/_includes/ui/navigation/nav.html
+++ b/_includes/ui/navigation/nav.html
@@ -13,7 +13,7 @@
                     <img src="/assets/images/short-black.png" alt="" class="cart-img">
                     <div class="detail-box">
                         <div class="cart-product-title">T-Shirt</div>
-                        <div class="cart-price">$20.00</div>
+                        <div class="cart-price">GMD20.00</div>
                         <input type="number" value="1" class="cart-quantity">
                     </div>
                     <!-- Remove -->
@@ -23,7 +23,7 @@
              <!-- Total -->
               <div class="total">
                 <div class="total-title">Total</div>
-                <div class="total-price">$0</div>
+                <div class="total-price">GMD0</div>
               </div>
               <!-- Buy Button -->
               <button type="button" class="whatsapp-btn">Buy Now</button>
