--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -20,7 +20,7 @@
       />
       <div class="pricing">
         <span class="price">
-          GMD {{ tracksuit_first.price }}
+          {{ tracksuit_first.price }}
         </span>
         <h2 class="product-title">Tracksuit</h2>
         <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
@@ -60,7 +60,7 @@
       />
       <div class="pricing">
         <span class="price">
-          GMD {{ tracksuit_last.price }}
+         {{ tracksuit_last.price }}
         </span>
         <h2 class="product-title">Tracksuit</h2>
         <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i>
