--- a/_includes/ui/items/hoodie.html
+++ b/_includes/ui/items/hoodie.html
@@ -2,49 +2,34 @@
   <h1 class="section-title">Our Hoodies</h1>
   <div class="hoodie__container">
     <div class="hoodie__container-items">
-      <!-- First hoodie -->
+      {% assign products = site.data.products | where: "category", "Hooddie" |
+      where: "visibility", "Yes" %} 
+      {% for product in products %}
+
       <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodieorange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
-        <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">GMD1000</span>
-        <i class="bx bx-shopping-bag add-cart" data-id="hoodie-1"></i>
+        <img
+          src="/assets/images{{ product.thumbnail }}"
+          alt="Go Grab Our Hoodie Now"
+          class="product-img modal-triger"
+        />
+        <h2 class="product-title">
+          {{ product.title }}
+        </h2>
+        <span class="price"> 
+          {{ product.price }} 
+        </span>
+        <i class="bx bx-shopping-bag add-cart" data-id="{{ product.id }}"></i>
       </div>
 
+      {% endfor %}
+
       <!-- Second hoodie -->
-      <div class="hoodie__container-item product-box">
+      <!-- <div class="hoodie__container-item product-box">
         <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
         <h2 class="product-title">Onyx Hoodie</h2>
         <span class="price">GMDD1000</span>
         <i class="bx bx-shopping-bag add-cart" data-id="hoodie-2"></i>
-      </div>
-
-      <!-- Third hoodie -->
-      <div class="hoodie__container-item product-box">
-        <img
-          src="/assets/images/hoodie-orange.png"
-          alt="Go Grab Our Hoodie Now"
-          class="product-img modal-triger"
-        />
-        <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">GMD1000</span>
-        <i class="bx bx-shopping-bag add-cart" data-id="hoodie-3"></i>
-      </div>
-
-      <!-- Fourth hoodie -->
-      <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hwomen.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
-        <h2 class="product-title">Blaze Hoodie</h2>
-        <span class="price">GMD1000</span>
-        <i class="bx bx-shopping-bag add-cart" data-id="hoodie-5"></i>
-      </div>
-
-      <!-- Fifth hoodie -->
-      <div class="hoodie__container-item product-box">
-        <img src="/assets/images/hoodie-orange.png" alt="Go Grab Our Hoodie Now" class="product-img modal-triger" />
-        <h2 class="product-title">Onyx Hoodie</h2>
-        <span class="price">GMD1000</span>
-        <i class="bx bx-shopping-bag add-cart" data-id="hoodie-6"></i>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
