changes on whatsapp links

--- a/_includes/ui/items/hoodie.html
+++ b/_includes/ui/items/hoodie.html
@@ -8,7 +8,7 @@
 
       <div class="hoodie__container-item product-box">
         <img
-          src="/assets/images{{ product.thumbnail }}"
+          src="/hustlestargm/assets/images{{ product.thumbnail }}"
           alt="Go Grab Our Hoodie Now"
           class="product-img modal-triger"
         />
