updates on whatsapp links

--- a/_includes/ui/items/shop2.html
+++ b/_includes/ui/items/shop2.html
@@ -5,7 +5,7 @@
         {% assign products = site.data.products | where: "category", "New-Drop" | where: "visibility", "Yes" %}
         {% for product in products %}
      <div class="product-box drop-box">
-         <img src="/assets/images{{ product.thumbnail }}" alt="Grab your new drop now!" class="product-img modal-triger">
+         <img src="/hustlestargm/assets/images{{ product.thumbnail }}" alt="Grab your new drop now!" class="product-img modal-triger">
          <h2 class="product-title">
             {{ product.title }}
          </h2>
