--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -14,7 +14,7 @@
     {% assign tracksuit_first = site.data.products | where: "id", 12 | first %}
     <figure class="gallery-item gallery-item--1 product-box">
       <img
-        src="/assets/images{{ tracksuit_first.thumbnail }}"
+        src="/hustlestargm/assets/images{{ tracksuit_first.thumbnail }}"
         alt="Go grab our tracksuit now"
         class="gallery-img product-img modal-triger product-img"
       />
