updates on the interface

--- a/_includes/ui/footer/footer.html
+++ b/_includes/ui/footer/footer.html
@@ -34,12 +34,14 @@
     <!-- Contact -->
     <div class="footer-contact">
       <h4>Contact Us</h4>
-      <p><a href="mailto:pabimamie@gmail.com">Email: support@hustlestars.com</a></p>
-      <p><a href="tel:+2207709979">Phone: +220 770 9979</a></p>
+      <a href="https://mail.google.com/mail/?view=cm&to=hustlestarclothing@gmail.com" target="_blank">Contact Us</a>
+      <!-- <a href="mailto:hustlestarclothing@gmail.com">Email: support@hustlestar.com</a> -->
+      <!-- <p><a href="mailto:pabimamie@gmail.com">Email: support@hustlestar.com</a></p> -->
+      <!-- <p><a href="tel:+2207709979">Phone: +220 770 9979</a></p> -->
     </div>
   </div>
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    <p>&copy; 2025 Huslestars Clothing. All rights reserved.</p>
+    <p>&copy; 2025 Huslestar Clothing. All rights reserved.</p>
   </div>
 </footer>
