--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -2,7 +2,7 @@
   <div class="tracksuit-head">
     <div class="tracksuit-head--left">
       <h1 class="title">
-        Grab our limited edition tracksuit, available in-store now!
+        NEW COLLECTION EXCLUSIVE TRACKSIUTS 
       </h1>
     </div>
     <div class="button-link">
