--- a/_includes/ui/masthead/hero.html
+++ b/_includes/ui/masthead/hero.html
@@ -1,13 +1,13 @@
 
 <section class="hero" id="home">
     <h1 class="hero_heading">
-        HUSTLESTARS – Unleash Your Inner Hustle and Wear the Power of Ambition.
+        HUSTLESTAR <br> Unleash Your Inner Hustle.
     </h1>
     <!-- Hero Grid -->
      <div class="hero-grid">
         <div class="hero-grid-item">
             <span class="topline">@HustleStars</span>
-       <h3 class="head-multitext">Our <span class="multitext"></span></h3>
+       <h3 class="head-multitext">Welcome <span class="multitext"></span></h3>
        <p class="hero-grid-item_paragraph"> <span>@Hustlestar,</span> we believe that hard work, perseverance, and pushing boundaries are the key to achieving greatness. Our
         brand is built on the idea of embracing the hustle, whether it’s in business, personal growth, or any endeavor you set
         your mind to. We aim to inspire individuals to take charge of their dreams, never settle for less, and always strive for
@@ -16,7 +16,7 @@
        </p>
         </div>
         <div class="hero-grid-item">
-            <img src="/hustlestargm/assets/images/heroimage.jpg" alt="" class="HustleStars">
+            <img src="/hustlestargm/assets/images/logo.JPEG" alt="" class="HustleStars">
         </div>
      </div>
 </section>
