--- a/_includes/ui/navigation/nav.html
+++ b/_includes/ui/navigation/nav.html
@@ -1,7 +1,7 @@
 <header>
     <!-- Nav -->
      <div class="nav container">
-        <a href="#" class="logo">Hustlestars</a>
+        <a href="#" class="logo"><img src="/hustlestargm/assets/images/logo.JPEG" alt=""></a>
         <!-- Cart Icon -->
         <i class='bx bx-shopping-bag' id="cart-icon"></i>
         <!-- Cart -->
