updates on layouts

--- a/_includes/ui/masthead/hero.html
+++ b/_includes/ui/masthead/hero.html
@@ -16,7 +16,7 @@
        </p>
         </div>
         <div class="hero-grid-item">
-            <img src="/hustlestargm/assets/images/logo.JPEG" alt="" class="HustleStars">
+            <img src="/hustlestargm/assets/images/heroimage.jpg" alt="" class="HustleStars">
         </div>
      </div>
 </section>
