updates whatsapp links

--- a/_includes/ui/footer/footer.html
+++ b/_includes/ui/footer/footer.html
@@ -27,17 +27,17 @@
       <ul>
         <li><a href="https://www.instagram.com/hustlestar_clothing?igsh=bXduNDlhOHczb3Ry&utm_source=qr" target="_blank"><i class='bx bxl-instagram'></i></a></li>
         <li><a href="https://www.tiktok.com/@hustlestarclothing?_t=ZM-8tRV5OJgvQr&_r=1" target="_blank"><i class='bx bxl-tiktok'></i></a></li>
-        <li><a href="https://www.twitter.com/" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
       </ul>
      </div>
 
     <!-- Contact -->
     <div class="footer-contact">
       <h4>Contact Us</h4>
-      <a href="https://mail.google.com/mail/?view=cm&to=hustlestarclothing@gmail.com" target="_blank">Contact Us</a>
-      <!-- <a href="mailto:hustlestarclothing@gmail.com">Email: support@hustlestar.com</a> -->
-      <!-- <p><a href="mailto:pabimamie@gmail.com">Email: support@hustlestar.com</a></p> -->
+      <a href="https://mail.google.com/mail/?view=cm&to=hustlestarclothing@gmail.com" target="_blank">hustlestarclothing@gmail.com</a>
       <!-- <p><a href="tel:+2207709979">Phone: +220 770 9979</a></p> -->
+       <h5>
+        <a href="#">Developer</a>
+      </h5>
     </div>
   </div>
   <!-- Footer Bottom -->
