--- a/_includes/ui/items/hoodie.html
+++ b/_includes/ui/items/hoodie.html
@@ -8,8 +8,8 @@
 
       <div class="hoodie__container-item product-box">
         <img
-          src="/hustlestargm/assets/images{{ product.thumbnail }}"
-          alt="Go Grab Our Hoodie Now"
+          src="/assets/images{{ product.thumbnail }}"
+          alt="Go Grab Our Hoodie Now!"
           class="product-img modal-triger"
         />
         <h2 class="product-title">
