--- a/_includes/ui/masthead/hero.html
+++ b/_includes/ui/masthead/hero.html
@@ -1,10 +1,11 @@
 
-<section class="hero" id="home">
+<section id="home" class="hero">
     <h1 class="hero_heading">
         HUSTLESTAR <br> Unleash Your Inner Hustle.
     </h1>
+    <!-- <img src="/assets/images/hero1.jpg" alt=""> -->
     <!-- Hero Grid -->
-     <div class="hero-grid">
+     <!-- <div class="hero-grid">
         <div class="hero-grid-item">
             <span class="topline">@HustleStars</span>
        <h3 class="head-multitext">Welcome <span class="multitext"></span></h3>
@@ -16,7 +17,7 @@
        </p>
         </div>
         <div class="hero-grid-item">
-            <img src="/hustlestargm/assets/images/heroimage.jpg" alt="" class="HustleStars">
+            <img src="/assets/images/logo.JPEG" alt="" class="HustleStars">
         </div>
-     </div>
+     </div> -->
 </section>
