--- a/_includes/ui/items/shop.html
+++ b/_includes/ui/items/shop.html
@@ -7,7 +7,7 @@
       {% assign products = site.data.products | where: "category", "T-Shirt" | where: "visibility", "Yes" %}
       {% for product in  products %}
          <div class="product-box">
-            <img src="/hustlestargm/assets/images{{ product.thumbnail }}" alt="" class="product-img">
+            <img src="/assets/images{{ product.thumbnail }}" alt="" class="product-img">
             <h2 class="product-title">
                {{ product.title }}
             </h2>
