--- a/_includes/ui/items/shop2.html
+++ b/_includes/ui/items/shop2.html
@@ -1,11 +1,13 @@
 <section class="new-drop container" id="newDrop">
-    <h1 class="section-title">New Drops</h1>
+    <!-- <h1 class="section-title">New Drops</h1> -->
+    <h1 class="section-title">Hustle Collection</h1>
+
     <div class="drop-container">
 
-        {% assign products = site.data.products | where: "category", "New-Drop" | where: "visibility", "Yes" %}
+        {% assign products = site.data.products | where: "category", "Hustle-Collection" | where: "visibility", "Yes" %}
         {% for product in products %}
      <div class="product-box drop-box">
-         <img src="/hustlestargm/assets/images{{ product.thumbnail }}" alt="Grab your new drop now!" class="product-img modal-triger">
+         <img src="/assets/images{{ product.thumbnail }}" alt="Grab Your New Hustle T-Shirt Now!" class="product-img modal-triger">
          <h2 class="product-title">
             {{ product.title }}
          </h2>
