whatsapp link updates

--- a/_includes/ui/footer/footer.html
+++ b/_includes/ui/footer/footer.html
@@ -35,9 +35,9 @@
       <h4>Contact Us</h4>
       <a href="https://mail.google.com/mail/?view=cm&to=hustlestarclothing@gmail.com" target="_blank">hustlestarclothing@gmail.com</a>
       <!-- <p><a href="tel:+2207709979">Phone: +220 770 9979</a></p> -->
-       <h5>
-        <a href="#">Developer</a>
-      </h5>
+       <!-- <h5>
+        <a href="https://mail.google.com/mail/?view=cm&to=camarakaramo002@gmail.com" target="_blank">Developer</a>
+      </h5> -->
     </div>
   </div>
   <!-- Footer Bottom -->
