--- a/_includes/ui/items/swa.html
+++ b/_includes/ui/items/swa.html
@@ -6,7 +6,7 @@
     {% for product in products %}
     <div class="product-box">
       <img
-        src="/assets/images{{ product.thumbnail }}"
+        src="/hustlestargm/assets/images{{ product.thumbnail }}"
         alt="Shine With Ambition T-Shirt"
         class="product-img modal-triger"
       />
