--- a/_includes/ui/items/tracksuit.html
+++ b/_includes/ui/items/tracksuit.html
@@ -14,7 +14,7 @@
     {% assign tracksuit_first = site.data.products | where: "id", 12 | first %}
     <figure class="gallery-item gallery-item--1 product-box">
       <img
-        src="/assets/images{{ tracksuit_first.thumbnail }}"
+        src="/hustlestargm/assets/images{{ tracksuit_first.thumbnail }}"
         alt="Get Your New Tracksuit Now!"
         class="gallery-img product-img modal-triger"
       />
@@ -23,8 +23,6 @@
           {{ tracksuit_first.price }}
         </span>
         <h2 class="product-title">Tracksuit</h2>
-        <!-- <i class="bx bx-shopping-bag add-cart whatsapp-btn">Buy Now</i> -->
-        <!-- <i class='bx bx-shopping-bag add-cart' data-id="{{ product.id }}"></i> -->
       </div>
         <i class='bx bx-shopping-bag add-cart' data-id="{{ product.id }}"></i>
     </figure>
@@ -35,7 +33,7 @@
       {% for product in  products offset: 1 limit: 4 %}
         <figure class="gallery-item gallery-item--2">
           <img
-            src="/assets/images{{ product.thumbnail }}"
+            src="/hustlestargm/assets/images{{ product.thumbnail }}"
             alt="Get Your New Tracksuit Now!"
             class="gallery-img product-img modal-triger"
           />
@@ -57,7 +55,7 @@
     {% assign tracksuit_last = site.data.products | where: "id", 17 | first %}
     <figure class="gallery-item gallery-item--1 product-box">
       <img
-        src="/assets/images{{ tracksuit_last.thumbnail }}"
+        src="/hustlestargm/assets/images{{ tracksuit_last.thumbnail }}"
         alt="Get Your New Tracksuit Now!"
         class="gallery-img product-img modal-triger product-img"
       />
